--- a/package.json
+++ b/package.json
@@ -7,9 +7,8 @@
         "node": ">=18.0.0"
     },
     "dependencies": {
-        "apify": "^3.2.6",
-        "crawlee": "^3.11.5",
-        "libretranslate": "^1.0.0"
+        "apify": "^3.4.2",
+        "crawlee": "^3.13.4"
     },
     "devDependencies": {
         "@apify/eslint-config": "^0.4.0",
